# Vehicle-Intelligence-

./: .env.example  .gitignore  .output.txt  ADMIN_KEY_FIX_SUMMARY.md  AI_LEARNING_FROM_ANDROID_VERIFICATION.md  AI_MODULES_DOCUMENTATION.md  ANDROID_APP_INTEGRATION_GUIDE.md  ANDROID_DESKTOP_INTEGRATION_VERIFICATION.txt  ANDROID_INTEGRATION_GUIDE.txt  ANDROID_INTEGRATION_PLAN.md  ANDROID_QUICK_START.md  API_KEY_SYNC_GUIDE.md  AUTOMOTIVE_AI_REDESIGN_PLAN.md  BATTLE_PLAN.txt  BRIDGE_QUICK_START.txt  CHANGELOG.md  CLAUDE.md  COMMERCIAL_READINESS_REPORT.md  COMPLETED.md  CONSULT2_ADAPTER_GUIDE.txt  CONSULT2_PROTOCOL.md  COPYRIGHT_DEPOSIT_DESKTOP.md  COPYRIGHT_DEPOSIT_DESKTOP_STABLE.md  COPYRIGHT_FILING_CHECKLIST.md  COPYRIGHT_HEADERS.md  COPYRIGHT_REGISTRATION_DESKTOP.md  COPYRIGHT_REGISTRATION_GUARDIAN.md  CarAISystem_Installer.bat  DATA_ORGANIZATION_STRUCTURE.txt  DESKTOP_DATA_HANDLING_ANALYSIS.md  Dockerfile  EXECUTION_CHECKLIST.md  FINAL_STATUS_AND_OPTIONS.txt  FINAL_SUMMARY.md  FUTURE_ENHANCEMENTS.md  GUARDIAN_MODE_IMPLEMENTATION.md  IF_NO_SOFTWARE.txt  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_GUIDE.md.txt  IMPLEMENTATION_PLAN.md  (+351 more)
.claude/: settings.local.json
ai_model_storage/: training_info.pkl
backups/: backup_log.json  backup_registry.json
config/: api_keys.template.json
configs/: vehicle_catalog.json
consult2_logs/: nissan_patrol_20260125_183641.csv
docs/: ANDROID_DEVELOPER_PROMPT.md  ANDROID_FEATURE_ENDPOINTS.md  EXECUTIVE_SUMMARY_INVESTORS.docx  EXECUTIVE_SUMMARY_INVESTORS.md  EXECUTIVE_SUMMARY_INVESTORS_v2.docx  EXECUTIVE_SUMMARY_INVESTORS_v3.docx  EXECUTIVE_SUMMARY_INVESTORS_v4.docx  EXECUTIVE_SUMMARY_INVESTORS_v5.docx  EXECUTIVE_SUMMARY_INVESTORS_v6.docx  EXECUTIVE_SUMMARY_INVESTORS_v7.docx  EXECUTIVE_SUMMARY_INVESTORS_v8.docx  EXECUTIVE_SUMMARY_INVESTORS_v9.docx  OPERATIONAL_RUNBOOKS.md  create_executive_summary_docx.py
learned OBD PIDS/: pid_00.json  pid_01.json  pid_0101.json  pid_0102.json  pid_0104.json  pid_0108.json  pid_0109.json  pid_010A.json  pid_010F.json  pid_0110.json  pid_0112.json  pid_0113.json  pid_0114.json  pid_0115.json  (+687 more)
(+1004 files in other folders)
