[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "predict"
version = "3.0.0"
description = "PREDICT - Vehicle Intelligence Platform"
requires-python = ">=3.11"
license = { text = "Proprietary" }

dependencies = [
    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.9",
    "websockets>=13.0",

    # Database
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "greenlet>=3.0",

    # Redis
    "redis[hiredis]>=5.2",
    "arq>=0.26",

    # Security
    "bcrypt>=4.2",
    "python-jose[cryptography]>=3.3",
    "slowapi>=0.1.9",

    # AI / ML
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "xgboost>=2.1",
    "lightgbm>=4.5",
    "joblib>=1.4",
    "shap>=0.46",
    "lifelines>=0.29",

    # Deep Learning (optional, installed separately if GPU needed)
    # "tensorflow>=2.16",

    # LLM
    "llama-cpp-python>=0.3",

    # PDF
    "reportlab>=4.2",

    # HTTP & Search
    "httpx>=0.27",
    "duckduckgo-search>=7.0",

    # Monitoring
    "sentry-sdk[fastapi]>=2.18",
    "psutil>=6.1",

    # Utilities
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "orjson>=3.10",
    "pyarrow>=18.0",

    # Push notifications
    "firebase-admin>=6.6",
]

[project.optional-dependencies]
desktop = [
    "PySide6>=6.8",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.27",
    "ruff>=0.8",
    "mypy>=1.13",
    "pip-audit>=2.7",
]

[project.scripts]
predict = "predict.__main__:main"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
